Fix view on Mobile
Turns out it was easier to just create a third page, and split
up the new recipe and recipe list components. I might separate
this out on desktop into just a wider view but, eh, this works
for now and isn't that annoying

--- a/ux/src/style/Recipe.scss
+++ b/ux/src/style/Recipe.scss
@@ -1,11 +1,15 @@
 @import './common.scss';
 
-#recipe-page {
+#recipe-page, #top-recipe-list {
   @extend .panel;
 
   @media (max-width: $mobile-width) {
     width: 90%;
   }
+}
+
+#top-recipe-list {
+  width: 90%;
 }
 
 #add-recipe {
@@ -81,15 +85,18 @@
   }
 }
 
-#recipe-list {
+#recipe-list {  
   .list {
     @include custom-scroll-bar;
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
-
-    max-height: 200px;
     overflow: auto;
+    height: 500px;
+
+    @media (max-width: $mobile-width) {
+      height: 350px;
+    }
 
     .recipe-item {
       display: flex;
